# spotify2mp3

./: .gitignore  LICENSE  README.md  config.ini  config.py  csv_io.py  main.py  pyproject.toml  requirements.txt  spotify_client.py  spotify_download.py  youtube_handler.py
spotify2media/: cli.py  config.py  main.py  spotify_client.py  youtube_handler.py
